--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.4.0",
   "type": "module",
   "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest",
     "tauri": "tauri"
   },
   "devDependencies": {
