--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.4.0",
   "type": "module",
   "scripts": {
-    "build": "babel src -d lib",
-    "test": "jest",
+    "build": "tauri build",
     "tauri": "tauri"
   },
   "devDependencies": {
